--- a/Configure/QuantumultX/QuantumultX.conf
+++ b/Configure/QuantumultX/QuantumultX.conf
@@ -1,9 +1,9 @@
-#############################################################################################
-# 创建者:JiaBei-Q                                                                           #
-# 客户端:QuantumultX                                                                        #
-# 创建日期:2024-03-03 10:10:01                                                              #
-# 托管地址:https://521github.com/JiaBei-Q/Configure/raw/main/QuantumultX/QuantumultX.conf   #                       
-#############################################################################################
+################################################################################################################################
+# 创建者:JiaBei-Q                                                                                                              #
+# 客户端:QuantumultX                                                                                                           #
+# 创建日期:2024-03-03 10:10:01                                                                                                 #
+# 托管地址:https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Configure/QuantumultX/QuantumultX.conf      #                       
+################################################################################################################################
 
 # > [+]2024-03-03      第一次配置    暂未进行深入修改；后期将加入更多规则及脚本；
 
@@ -95,9 +95,9 @@ https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, ta
 
 # ☢️ 远程节点订阅
 [server_remote]
-https://sub.fq521.onflashdrive.app/auto, tag=轩辕测试节点, update-interval=86400, opt-parser=true,  img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Icon/Test/%E6%B5%8B%E8%AF%95.png
+https://sub.fq521.onflashdrive.app/auto, tag=轩辕测试节点, update-interval=86400, opt-parser=true,  img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Icon/Other/Download/001-100/06.png
 
-https://tt.vg/Gitlab-V, tag=仓库节点, update-interval=86400, opt-parser=true,  img-url=https://521github.com/extdomains/github.com/JiaBei-Q/icon/raw/main/Airport/Hxlm.png
+https://tt.vg/Gitlab-V, tag=仓库节点, update-interval=86400, opt-parser=true,  img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Icon/Other/Download/001-100/03.png
 
 
 # ☢️ 禁用系统DNS/IPv6
