--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -1,9 +1,9 @@
-###############################################################################
-# 创建者:JiaBei-Q                                                              #
-# 客户端: Surge                                                                #
-# 创建日期:2024-03-03 10:10:01                                                 #
-# 托管地址:https://521github.com/JiaBei-Q/Configure/raw/main/Surge/Surge.conf  #                       
-###############################################################################
+##################################################################################################################
+# 创建者:JiaBei-Q                                                                                                 #
+# 客户端: Surge                                                                                                   #
+# 创建日期:2024-03-03 10:10:01                                                                                    #
+# 托管地址:https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Configure/Surge/Surge.conf     #                       
+##################################################################################################################
 
 # > 2024-03-03      第一次配置    暂未进行深入修改；后期将加入更多规则及脚本；
 
@@ -14,7 +14,7 @@
 
 [General]
 # > 配置托管
-#!MANAGED-CONFIG https://521github.com/JiaBei-Q/Configure/raw/main/Surge/Surge.conf interval=60 strict=false
+#!MANAGED-CONFIG https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Configure/Surge/Surge.conf  interval=60 strict=false
 
 # > 日志级别:warning, notify, info, verbose (默认值: notify) 
 loglevel = notify
