--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -107,7 +107,7 @@ EDC_Surge-Panel = type=generic,script-path=https://521github.com/extdomains/raw.
 [Proxy Group]
 # > 外部订阅链接
 # > hidden=1 或者 hidden=true 隐藏该策略组
-机场1 = select,policy-path=https://tt.vg/Node, hidden=1
+机场1 = select,policy-path=https://dy.twittei.link/auto, hidden=1
 机场2 = select,policy-path=https://tt.vg/IMP, hidden=1
 
 # > 此处可添加更多机场订阅链接
