--- a/Configure/QuantumultX/QuantumultX.conf
+++ b/Configure/QuantumultX/QuantumultX.conf
@@ -97,7 +97,7 @@ https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, ta
 [server_remote]
 https://sub.fq521.onflashdrive.app/auto, tag=轩辕测试节点, update-interval=86400, opt-parser=true,  img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Icon/Vector/001-100/Bypass.png
 
-https://tt.vg/Gitlab-V, tag=仓库节点, update-interval=86400, opt-parser=true,  img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/blob/main/Icon/Vector/001-100/Bat.png
+https://521github.com/extdomains/raw.githubusercontent.com/JiaBei-Q/Auxiliary/main/Node/Temporarily/Seppd.txt, tag=测速节点, update-interval=86400, opt-parser=true,  img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/blob/main/Icon/Vector/001-100/Bat.png
 
 
 # ☢️ 禁用系统DNS/IPv6
