--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -108,9 +108,9 @@ EDC_Surge-Panel = type=generic,script-path=https://521github.com/extdomains/raw.
 # > 外部订阅链接
 # > hidden=1 或者 hidden=true 隐藏该策略组
 
-机场1 = select,policy-path=http://127.0.0.1:25500/sub?target=surge&ver=4&tfo=true&udp=true&emoji=true&exclude=%28%E6%B5%81%E9%87%8F%7C%E5%AE%98%E7%BD%91%29&url=https%3A%2F%2F521github.com%2Fextdomains%2Fraw.githubusercontent.com%2Fchengaopan%2FAutoMergePublicNodes%2Fmaster%2Flist.yml, hidden=1
+机场1 = select,policy-path=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Node/Suger.txt, hidden=1
 
-机场2 = select,policy-path=http://127.0.0.1:25500/sub?target=surge&ver=4&tfo=true&udp=true&emoji=true&exclude=%28%E6%B5%81%E9%87%8F%7C%E5%AE%98%E7%BD%91%29&url=https%3A%2F%2F521github.com%2Fextdomains%2Fraw.githubusercontent.com%2Fanaer%2FSub%2Fmain%2Fclash.yaml, hidden=1
+# > 机场2 = select,policy-path=, hidden=1
 
 # > 备用订阅链接URL:🚀
 
