--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -10,119 +10,119 @@
 
 
  
-# >图标备用：📮✉️📪📬💫💬💥🔨🥼🚫🔰🙈🍎🎬📺🎱🍐🐝🦁💡🌵🐯🎸💻📽🌏🕹📡🦑🌟🐷🦒🐳🚦📵🎧💊🔓🚦🚥🐼⛔️🈲🌐🎯🖲️🐦🔞🎵📱🚀💳♻️🙈🍱🔂📦🔀⏱ 🔜🛫📶🔜📶🛫☠️👽👣👉🥷🧞‍♀️🧚‍♀️🙅🙅‍♂️🤳🪡⛑💍🧢🐍🪲🐞🐠🦜🎄🪐🌎🌍🌏❄️🍱🍭🍡🍩🧃🍶⛳️🪁🏹🎣🏂🪂⛷🥇🥈🥉🏅🎖🎮🎲🏍✈️🛫🛬🛩🛰🚀🛸⚓️🚦🗼🏝🎡📱📲💻⌨️🖥🕹💾💿📀🎥📟🧭⌛️⏳📡🪫💰💳🪪💎⚖️🛠🔨⚙️⛓🛡🚬💈🔭🔬💉🩸🧬🦠📩💌📥📤📌📍🔗🔐🔒🔓❤️‍🩹💘💞💕❣️💓💗🩷❤️🧡💛💚🩵💙💜🖤🩶🤍🤎💔💝💘💟☮️✝️☪️🕉☸️🪯✡️🔯🕎☯️☦️🛐⛎♈️♉️♊️♋️♌️♍️♎️♏️♐️♑️♒️♓️🆔⚛️☢️☣️📴📳🉑🈶🈚️🈸🈺🈷️✴️🆚💮🉐㊙️㊗️🈴🈵🈹🈲🅰️🅱️🆎🆑🅾️🆘❌⭕️🛑⛔️📛🚫💯💢♨️🚷🚯🚳🚱🔞📵🚭❗️❓‼️⁉️〽️⚠️🚸🔱⚜️🔰♻️✅🈯️💹❇️✳️❎🌐💠Ⓜ️🌀💤🏧🚾♿️🅿️🛗🈳🈂️🛂🛃🛄🛅🛜🚹🚺🚼⚧🚻🚮🎦📶🈁🔣ℹ️🔤🔡🔠🆖🆗🆙🆒🆕🆓0️⃣1️⃣2️⃣3️⃣4️⃣5️⃣6️⃣7️⃣8️⃣9️⃣🔟🔢#️⃣*️⃣⏏️▶️⏸⏯⏹⏺⏭⏮⏩⏪⏫⏬◀️🔼🔽➡️⬅️⬆️⬇️↗️↘️↙️↖️↕️↔️↪️↩️⤴️⤵️🔀🔁🔂🔄🔃🎵🎶➕➖➗✖️🟰♾™️©️®️🔚🔙🔛🔝🔜➿🔔🔕📣💬🀄️
+# > 图标备用：📮✉️📪📬💫💬💥🔨🥼🚫🔰🙈🍎🎬📺🎱🍐🐝🦁💡🌵🐯🎸💻📽🌏🕹📡🦑🌟🐷🦒🐳🚦📵🎧💊🔓🚦🚥🐼⛔️🈲🌐🎯🖲️🐦🔞🎵📱🚀💳♻️🙈🍱🔂📦🔀⏱ 🔜🛫📶🔜📶🛫☠️👽👣👉🥷🧞‍♀️🧚‍♀️🙅🙅‍♂️🤳🪡⛑💍🧢🐍🪲🐞🐠🦜🎄🪐🌎🌍🌏❄️🍱🍭🍡🍩🧃🍶⛳️🪁🏹🎣🏂🪂⛷🥇🥈🥉🏅🎖🎮🎲🏍✈️🛫🛬🛩🛰🚀🛸⚓️🚦🗼🏝🎡📱📲💻⌨️🖥🕹💾💿📀🎥📟🧭⌛️⏳📡🪫💰💳🪪💎⚖️🛠🔨⚙️⛓🛡🚬💈🔭🔬💉🩸🧬🦠📩💌📥📤📌📍🔗🔐🔒🔓❤️‍🩹💘💞💕❣️💓💗🩷❤️🧡💛💚🩵💙💜🖤🩶🤍🤎💔💝💘💟☮️✝️☪️🕉☸️🪯✡️🔯🕎☯️☦️🛐⛎♈️♉️♊️♋️♌️♍️♎️♏️♐️♑️♒️♓️🆔⚛️☢️☣️📴📳🉑🈶🈚️🈸🈺🈷️✴️🆚💮🉐㊙️㊗️🈴🈵🈹🈲🅰️🅱️🆎🆑🅾️🆘❌⭕️🛑⛔️📛🚫💯💢♨️🚷🚯🚳🚱🔞📵🚭❗️❓‼️⁉️〽️⚠️🚸🔱⚜️🔰♻️✅🈯️💹❇️✳️❎🌐💠Ⓜ️🌀💤🏧🚾♿️🅿️🛗🈳🈂️🛂🛃🛄🛅🛜🚹🚺🚼⚧🚻🚮🎦📶🈁🔣ℹ️🔤🔡🔠🆖🆗🆙🆒🆕🆓0️⃣1️⃣2️⃣3️⃣4️⃣5️⃣6️⃣7️⃣8️⃣9️⃣🔟🔢#️⃣*️⃣⏏️▶️⏸⏯⏹⏺⏭⏮⏩⏪⏫⏬◀️🔼🔽➡️⬅️⬆️⬇️↗️↘️↙️↖️↕️↔️↪️↩️⤴️⤵️🔀🔁🔂🔄🔃🎵🎶➕➖➗✖️🟰♾™️©️®️🔚🔙🔛🔝🔜➿🔔🔕📣💬🀄️
 
 [General]
-# > 配置托管
+# ☢️ 配置托管
 #!MANAGED-CONFIG https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Configure/Surge/Surge.conf  interval=60 strict=false
 
-# > 日志级别:warning, notify, info, verbose (默认值: notify) 
+# ☢️ 日志级别:warning, notify, info, verbose (默认值: notify) 
 loglevel = notify
 
 
-# > 拒绝显示错误页面
+# ☢️ 拒绝显示错误页面
 show-error-page-for-reject = true
 
-# > 增强版 Wi-Fi 助理
+# ☢️ 增强版 Wi-Fi 助理
 allow-wifi-access = false
 
-# > All Hybrid 网络并发
+# ☢️ All Hybrid 网络并发
 all-hybrid = false
 
-# > IPv6 支持（默认关闭）
+# ☢️ IPv6 支持（默认关闭）
 ipv6 = false
 
-# > 测试超时（秒）
+# ☢️ 测试超时（秒）
 test-timeout = 2
 
-# > Internet 测试 URL
+# ☢️ Internet 测试 URL
 internet-test-url = http://www.baidu.com
 
-# > 代理测速 URL
+# ☢️ 代理测速 URL
 proxy-test-url = http://www.gstatic.com/generate_204
 
-# > GeoIP数据库
+# ☢️ GeoIP数据库
 geoip-maxmind-url = https://521github.com/extdomains/github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
-# > GeoIP 自动更新
+# ☢️ GeoIP 自动更新
 disable-geoip-db-auto-update = true
 
-# > 排除简单主机名
+# ☢️ 排除简单主机名
 exclude-simple-hostnames = true
 
-# > DNS 服务器
+# ☢️ DNS 服务器
 dns-server = 223.5.5.5, 119.29.29.29
 hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 
-# > 从 /etc/hosts 读取 DNS 记录
+# ☢️ 从 /etc/hosts 读取 DNS 记录
 read-etc-hosts = true
 
-# > 远程控制器
+# ☢️ 远程控制器
 http-api-web-dashboard = false
 use-default-policy-if-wifi-not-primary = false
 
-# > 跳过代理
+# ☢️ 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, sequoia.apple.com
 tun-included-routes = 192.168.1.12/32
 
-# > Always Real IP Hosts
+# ☢️ Always Real IP Hosts
 always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 http-listen = 0.0.0.0
 socks5-listen = 0.0.0.0
 
-# > WiFi辅助
+# ☢️ WiFi辅助
 wifi-assist = false
 ipv6-vif = false
 http-api = examplekey@0.0.0.0:6166
 http-api-tls = false
 udp-policy-not-supported-behaviour = DIRECT
 
-# > HTTP-API-TLS
+# ☢️ HTTP-API-TLS
 http-api-tls = false 
 
-# > UDP IP 防泄漏
+# ☢️ UDP IP 防泄漏
 udp-policy-not-supported-behaviour = false
 
-# > 路由防火墙
-# > 包含所有的网络请求
+# ☢️ 路由防火墙
+# ☢️ 包含所有的网络请求
 include-local-networks = false
 
 [Replica]
-# > 隐藏 Apple 请求
+# ☢️ 隐藏 Apple 请求
 hide-apple-request = false
 
-# > 隐藏崩溃追踪器请求
+# ☢️ 隐藏崩溃追踪器请求
 hide-crash-reporter-request = true
 
-# > 隐藏 UDP 会话
+# ☢️ 隐藏 UDP 会话
 hide-udp = false
 
-# > 关键词过滤器
+# ☢️ 关键词过滤器
 keyword-filter-type = false
 
 [Script]
-# 显示运行时间及MitM等功能开关状态
+# ☢️ 显示运行时间及MitM等功能开关状态
 EDC_Surge-Panel = type=generic,script-path=https://521github.com/extdomains/raw.githubusercontent.com/erdongchanyo/Rules/main/Surge/Panels/EDC_Surge-Panel.js,argument=icon=crown.fill&color=#f6c970
  
 [Proxy Group]
-# > 外部订阅链接
-# > hidden=1 或者 hidden=true 隐藏该策略组
+# ☢️ 外部订阅链接
+# ☢️ hidden=1 或者 hidden=true 隐藏该策略组
 
 机场1 = select,policy-path=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Node/Suger.txt, hidden=1
 
 # > 机场2 = select,policy-path=, hidden=1
 
-# > 备用订阅链接URL:🚀
+# ☢️ 备用订阅链接URL:🚀
 
-# > 此处可添加更多机场订阅链接
-# > 机场3 =select,policy-path=XXXXXXXXXX, hidden=1
-# > 机场4 =select,policy-path=XXXXXXXXXX, hidden=1
-# > 如增加Sub-Store订阅链接则写法如下：
-# > PROXY = select, policy-path=https://sub.store/download/collection/MySub, update-interval=0
+# ☢️ 此处可添加更多机场订阅链接
+# ☢️ 机场3 =select,policy-path=XXXXXXXXXX, hidden=1
+# ☢️ 机场4 =select,policy-path=XXXXXXXXXX, hidden=1
+# ☢️ 如增加Sub-Store订阅链接则写法如下：
+# ☢️ PROXY = select, policy-path=https://sub.store/download/collection/MySub, update-interval=0
 
 机场合并 = url-test,include-other-group="机场1,机场2", hidden=1
 
-# > 配置选择文件
+# ☢️ 配置选择文件
 🛫 节点选择 = select, ☯️ 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
 📶 手动切换 = select, include-other-group="机场合并", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
 ☯️ 自动选择 = url-test, include-other-group="机场合并", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
@@ -145,8 +145,8 @@ EDC_Surge-Panel = type=generic,script-path=https://521github.com/extdomains/raw.
 ⚠️ 应用净化 = select, REJECT, DIRECT
 🐬 漏网之鱼 = select, 🛫 节点选择, ☯️ 自动选择, DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换
 
-# > 外部节点自动匹配
-# > 匹配到关键字，自动收纳为节点组
+# ☢️ 外部节点自动匹配
+# ☢️ 匹配到关键字，自动收纳为节点组
 🇭🇰 香港节点 = url-test, include-other-group="机场合并", policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
 🇨🇳 台湾节点 = url-test, include-other-group="机场合并", policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
 🇺🇲 美国节点 = url-test, include-other-group="机场合并", policy-regex-filter=(🇺🇸)|(美)|(States)|(US), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
@@ -154,7 +154,8 @@ EDC_Surge-Panel = type=generic,script-path=https://521github.com/extdomains/raw.
 🇸🇬 狮城节点 = url-test, include-other-group="机场合并", policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
 🇰🇷 韩国节点 = url-test, include-other-group="机场合并", policy-regex-filter=(🇰🇷)|(韩)|(Korea)|(KR), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
 🎥 奈飞节点 = select, include-other-group="机场合并", policy-regex-filter=(NF)|(奈飞)|(Netflix)|(video)|(Video)|(nf), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
- 
+
+# ☢️ 规则分流
 [Rule]
 RULE-SET,https://521github.com/extdomains/raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,⚖️ 全球直连,update-interval=86400
 RULE-SET,https://521github.com/extdomains/raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list,⚖️ 全球直连,update-interval=86400
