--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -61,7 +61,7 @@ wifi-access-socks5-port = 7221
 real-ip = msftconnecttest.com, msftncsi.com, *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 
 # ☢️ 代理测速 URL
-proxy-test-url = http://developers.google.cn/generate_204
+proxy-test-url = http://www.gstatic.com/generate_204
 # www.google.com
 # http://developers.google.cn/generate_204
 # http://www.gstatic.com/generate_204
