--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -76,7 +76,7 @@ interface-mode = auto
 switch-node-after-failure-times = 2
 
 # ☢️ 解析器
-resource-parser = https://521github.com/extdomains/raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/dist/sub-store-parser.loon.min.js
+resource-parser = https://gitlab.com/sub-store/Sub-Store/-/releases/permalink/latest/downloads/sub-store-parser.loon.min.js
 
 # ☢️ ssid-trigger参数，用于指定SSID下流量模式切换，（default表示默认，cellular表示蜂窝，目前支持三种值：rule，direct，proxy） 
 
@@ -128,6 +128,18 @@ dl.l.google.com = server:119.29.29.29
 [Proxy]
 # ☢️ 内置 DIRECT、REJECT 策略
 # ☢️ 节点名称 = 协议，服务器地址，服务器端口，加密协议，密码
+
+# ☢️ 节点筛选
+[Remote Filter]
+# ☢️ 示例1:
+# ☢️订阅节点 = NameRegex, FilterKey = "^(?!.*(流量|测试|使用|更新|游戏)).*$"
+# ☢️手动筛选 = NameRegex, FilterKey = "(.*)"
+# ☢️香港节点 = NameRegex, FilterKey = "香港|HK|HongKong"
+# ☢️台湾节点 = NameRegex, FilterKey = "台湾|TW|Tai"
+# ☢️日本节点 = NameRegex, FilterKey = "日本|JP|Japan"
+# ☢️美国节点 = NameRegex, FilterKey = "美国|US|United States"
+# ☢️狮城节点 = NameRegex, FilterKey = "新加坡|狮城|SG|Singapore"
+# ☢️网飞节点 = NameRegex, FilterKey = "网飞|奈飞|解锁|NF|Netflix"
 
 # ☢️ 节点组订阅
 [Remote Proxy]
