--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -157,7 +157,7 @@ dl.l.google.com = server:119.29.29.29
 # ☢️ 示例3:
 # ☢️ 卡车极速 = https://kcssr.me/auth/register?code=jUqG
 
-仓库订阅 = https://tt.vg/Gitlab-V,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://521github.com/extdomains/raw.githubusercontent.com/alpha87/Loon-icon/master/Color/UN.png
+仓库订阅 = https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Node/General.txt,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Icon/Color/001-100/Airport%20(2).png
 
 # ☢️ 功能策略
 [Proxy Group]
