--- a/Configure/Clash/Clash.yaml
+++ b/Configure/Clash/Clash.yaml
@@ -1,8 +1,8 @@
 ################################################################################################################################
 # 创建者:JiaBei-Q                                                                                                              #
-# 客户端:Clash                                                                                                           #
+# 客户端:Clash                                                                                                                 #
 # 创建日期:2024-03-03 10:10:01                                                                                                 #
-# 托管地址:https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Configure/QuantumultX/QuantumultX.conf      #                       
+# 托管地址:https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Configure/Clash/Clash.yaml                  #                       
 ################################################################################################################################
 
 # > [+]2024-03-03      第一次配置    暂未进行深入修改；后期将加入更多规则及脚本；
