--- a/Configure/LanceX/LanceX.conf
+++ b/Configure/LanceX/LanceX.conf
@@ -1,1 +1,113 @@
+################################################################################################################################
+# 创建者:JiaBei-Q                                                                                                              #
+# 客户端:Clash                                                                                                                 #
+# 创建日期:2024-03-03 10:10:01                                                                                                 #
+# 托管地址:https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Configure/Clash/Clash.yaml                  #                       
+################################################################################################################################
 
+# > [+]2024-03-03      第一次配置    暂未进行深入修改；后期将加入更多规则及脚本；
+
+
+
+ 
+# > 图标备用：📮✉️📪📬💫💬💥🔨🥼🚫🔰🙈🍎🎬📺🎱🍐🐝🦁💡🌵🐯🎸💻📽🌏🕹📡🦑🌟🐷🦒🐳🚦📵🎧💊🔓🚦🚥🐼⛔️🈲🌐🎯🖲️🐦🔞🎵📱🚀💳♻️🙈🍱🔂📦🔀⏱ 🔜🛫📶🔜📶🛫☠️👽👣👉🥷🧞‍♀️🧚‍♀️🙅🙅‍♂️🤳🪡⛑💍🧢🐍🪲🐞🐠🦜🎄🪐🌎🌍🌏❄️🍱🍭🍡🍩🧃🍶⛳️🪁🏹🎣🏂🪂⛷🥇🥈🥉🏅🎖🎮🎲🏍✈️🛫🛬🛩🛰🚀🛸⚓️🚦🗼🏝🎡📱📲💻⌨️🖥🕹💾💿📀🎥📟🧭⌛️⏳📡🪫💰💳🪪💎⚖️🛠🔨⚙️⛓🛡🚬💈🔭🔬💉🩸🧬🦠📩💌📥📤📌📍🔗🔐🔒🔓❤️‍🩹💘💞💕❣️💓💗🩷❤️🧡💛💚🩵💙💜🖤🩶🤍🤎💔💝💘💟☮️✝️☪️🕉☸️🪯✡️🔯🕎☯️☦️🛐⛎♈️♉️♊️♋️♌️♍️♎️♏️♐️♑️♒️♓️🆔⚛️☢️☣️📴📳🉑🈶🈚️🈸🈺🈷️✴️🆚💮🉐㊙️㊗️🈴🈵🈹🈲🅰️🅱️🆎🆑🅾️🆘❌⭕️🛑⛔️📛🚫💯💢♨️🚷🚯🚳🚱🔞📵🚭❗️❓‼️⁉️〽️⚠️🚸🔱⚜️🔰♻️✅🈯️💹❇️✳️❎🌐💠Ⓜ️🌀💤🏧🚾♿️🅿️🛗🈳🈂️🛂🛃🛄🛅🛜🚹🚺🚼⚧🚻🚮🎦📶🈁🔣ℹ️🔤🔡🔠🆖🆗🆙🆒🆕🆓0️⃣1️⃣2️⃣3️⃣4️⃣5️⃣6️⃣7️⃣8️⃣9️⃣🔟🔢#️⃣*️⃣⏏️▶️⏸⏯⏹⏺⏭⏮⏩⏪⏫⏬◀️🔼🔽➡️⬅️⬆️⬇️↗️↘️↙️↖️↕️↔️↪️↩️⤴️⤵️🔀🔁🔂🔄🔃🎵🎶➕➖➗✖️🟰♾™️©️®️🔚🔙🔛🔝🔜➿🔔🔕📣💬🀄️
+
+# ☢️ 通用配置头
+[General]
+bypass-system = true
+skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,captive.apple.com,*.ccb.com,*.abchina.com.cn,*.psbc.com,www.baidu.com
+tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
+dns-server = https://doh.pub/dns-query,https://dns.alidns.com/dns-query,223.5.5.5,119.29.29.29
+
+# ☢️ 代理策略组
+[Proxy Provider]
+ChatGPT = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+YouTube = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+Netflix = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+Disney+ = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+HBO = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+Spotify = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+Telegram = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+Twitter = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+Facebook = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+PayPal = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+Amazon = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+苹果服务 = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+谷歌服务 = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+微软服务 = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+哔哩哔哩 = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+游戏平台 = count=6, select=1, type=select, provider-1=香港节点, provider-2=台湾节点, provider-3=日本节点, provider-4=新加坡节点, provider-5=韩国节点, provider-6=美国节点
+香港节点 = count=1, type=url-test, proxy-filter-regex-1= HK|Hong|hong|香港|深港|沪港|京港|港
+台湾节点 = count=1, type=url-test, proxy-filter-regex-1=TW|Taiwan|taiwan|台湾|台北|台中|新北|彰化
+日本节点 = count=1, type=url-test, proxy-filter-regex-1=JP|Japan|japan|Tokyo|tokyo|日本|东京|大阪|京日|苏日|沪日|上日|川日|深日|广日
+新加坡节点 = count=1, type=url-test, proxy-filter-regex-1=SG|Sing|sing|新加坡|狮城|沪新|京新|深新|杭新|广新
+韩国节点 = count=1, type=url-test, proxy-filter-regex-1=KR|Korea|korea|KOR|韩国|首尔|韩|韓|春川
+美国节点 = count=1, type=url-test, proxy-filter-regex-1=US|USA|America|america|United|united|美国|凤凰城|洛杉矶|西雅图|芝加哥|纽约|沪美|美
+
+# ☢️ 分流规则
+[Rule]
+RULE-SET,https://raw.githubusercontent.com/wlxuf/add_rule/main/direct-amend.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/wlxuf/add_rule/main/proxy-amend.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list,PROXY, provider=苹果服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,哔哩哔哩
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/NetEaseMusic/NetEaseMusic.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Baidu/Baidu.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/DouBan/DouBan.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/DouYin/DouYin.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Weibo/Weibo.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Zhihu/Zhihu.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/XiaoHongShu/XiaoHongShu.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,PROXY, provider=YOUTUBE
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,PROXY, provider=NETFLIX
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,PROXY, provider=DISNEY+
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/HBO/HBO.list,PROXY, provider=HBO
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Spotify/Spotify.list,PROXY, provider=SPOTIFY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,PROXY, provider=TELEGRAM
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/PayPal/PayPal.list,PROXY, provider=PAYPAL
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,PROXY, provider=TWITTER
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,PROXY, provider=FACEBOOK
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Amazon/Amazon.list,PROXY, provider=AMAZON
+RULE-SET,https://raw.githubusercontent.com/wlxuf/add_rule/main/ChatGPT.list,PROXY, provider=CHATGPT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Sony/Sony.list,PROXY, provider=游戏平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Nintendo/Nintendo.list,PROXY, provider=游戏平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Epic/Epic.list,PROXY, provider=游戏平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/SteamCN/SteamCN.list,PROXY, provider=游戏平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Steam/Steam.list,PROXY, provider=游戏平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,PROXY, provider=游戏平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,PROXY, provider=微软服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,PROXY, provider=谷歌服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TVB/TVB.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Speedtest/Speedtest.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/China/China.list,DIRECT
+
+# ☢️ 本地局域网地址的规则集
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
+
+# ☢️ 表示CN地区的IP分流走直连，GEOIP数据库用来判断IP是否属于CN地区。默认使用Shadowrocket自带的GEOIP数据库，如果您想替换其他数据库，可在 设置 - GeoLite2数据库 里添加和修改
+GEOIP,CN,DIRECT
+
+# ☢️ 表示当其他所有规则都匹配不到时才使用FINAL规则的策略
+FINAL,PROXY
+
+[URL Rewrite]
+# ☢️ Google搜索引擎防跳转的重写
+^https?://(www.)?g.cn https://www.google.com 302
+^https?://(www.)?google.cn https://www.google.com 302
+
+# ☢️ 免拔卡解锁TikTok的重写，默认解锁地区为「日本」。需要换区时，请将下面一行的“JP”修改成其他国家或地区的英文名缩写，如“TW、KR、US”等
+(?<=_region=)CN(?=&) JP 307
+(?<=&mcc_mnc=)4 2 307
+^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
+(^https?:\/\/*\.\w{4}okv.com\/.+&.+)(\d{2}\.3\.\d)(.+) $118.0$3 302
+
+[Script]
+# ☢️ BoxJs安装脚本
+Rewrite: BoxJs = type=http-request,pattern=https?:\/\/boxjs\.(com|net),script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js, requires-body=true, timeout=120
+
+[MITM]
+# ☢️ Shadowrocket仅会解密hostname指定的域名的请求，可以使用通配符。也可以使用前缀 - 排除特定主机名，如 -*.example.com。iOS系统和某些应用有严格的安全策略，仅信任某些特定的证书，对这些域名启动解密可能导致问题，如 *.apple.com，*.icloud.com。
+hostname = www.google.cn,*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com
