--- a/Configure/Shadowrocket/Shadowrocket.conf
+++ b/Configure/Shadowrocket/Shadowrocket.conf
@@ -2,7 +2,7 @@
 # 创建者:JiaBei-Q                                                                                                              #
 # 客户端:Clash                                                                                                                 #
 # 创建日期:2024-03-03 10:10:01                                                                                                 #
-# 托管地址:https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Configure/Clash/Clash.yaml                  #                       
+# 托管地址:https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Configure/Shadowrocket/Shadowrocket.conf    #                       
 ################################################################################################################################
 # Shadowrocket添加配置方法：配置 - 右上角➕ - 粘贴配置链接 - 下载 - 点击对应的配置文件 - 使用配置。
 # Shadowrocket快速使用方法：
@@ -49313,10 +49313,10 @@ DOMAIN-SUFFIX,zzyy20.top,Reject
 DOMAIN-SUFFIX,zzzjvqzkmqjyb.top,Reject
 
 # 直连策略的修正规则集。
-RULE-SET,https://raw.githubusercontent.com/wlxuf/add_rule/main/direct-amend.list,DIRECT
+RULE-SET,https://521github.com/extdomains/raw.githubusercontent.com/wlxuf/add_rule/main/direct-amend.list,DIRECT
 
 # 代理策略的修正规则集。
-RULE-SET,https://raw.githubusercontent.com/wlxuf/add_rule/main/proxy-amend.list,PROXY
+RULE-SET,https://521github.com/extdomains/raw.githubusercontent.com/wlxuf/add_rule/main/proxy-amend.list,PROXY
 # 国外常用服务单独分流：YouTube，Netflix，Disney+，HBO，Spotify，Telegram，PayPal，Twitter，Facebook，Google，TikTok，GitHub，ChatGPT，TVB。
 
 # 国内常用服务单独分流：苹果服务，微软服务，哔哩哔哩，网易云音乐，游戏平台，亚马逊，百度，豆瓣，微信，抖音，新浪，知乎，小红书。
