--- a/Configure/QuantumultX/QuantumultX.conf
+++ b/Configure/QuantumultX/QuantumultX.conf
@@ -87,6 +87,7 @@ https://sub.fq521.onflashdrive.app/auto, tag=轩辕测试节点, update-interval
 
 https://521github.com/extdomains/raw.githubusercontent.com/JiaBei-Q/Auxiliary/main/Node/Temporarily/Seppd.txt, tag=测速节点, update-interval=86400, opt-parser=true,  img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/blob/main/Icon/Vector/001-100/Bat.png
 
+https://vmess.fxxk.dedyn.io/auto,tag=果闻测试节点, update-interval=86400, opt-parser=true,  img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Icon/Other/Download/101-147/142.png
 
 # ☢️ 禁用系统DNS/IPv6
 [dns]
